# fermit

./: NOTES.md  README.md  main.py  notes.ipynb  pyproject.toml  ruff.toml  test.json
examples/: fastapi_example.py  resources.py  simple.txt
fermit/: decorator.py
fermit/app/: fermit.py  models.py  resource.py
fermit/auth/: helpers.py  middleware.py
fermit/cli/: app.py
fermit/core/: __init__.py  action.py  constants.py  meta.py  policy.py  relation.py  resource.py  role.py
fermit/databases/: __init__.py
fermit/enforcer/: enforcer.py
fermit/mypy/: fermit_plugin.py
fermit/utils/: constants.py  helpers.py
notebooks/: abstract_class_exp.py
notebooks/__marimo__/session/: abstract_class_exp.py.json
tests/app/: test_resource.py
tests/core/: test_resource.py  test_role.py
