[project]
name = "fermit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "mypy>=1.19.1",
]

[project.optional-dependencies]
postgresql = [
    "sqlalchemy>=2.0",
]

[tool.mypy]
plugins = ["fermit_plugin"]

[dependency-groups]
dev = [
    "marimo>=0.20.2",
    "ruff>=0.14.14",
    "zensical>=0.0.32",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
